[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "firebase-admin>=6.6.0",
    "beautifulsoup4>=4.13.4",
    "requests>=2.32.4",
    "yfinance>=0.2.41",
    "pandas>=2.1.0",
    "groq>=0.3.0"
]
